...
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"/>



    <Button
        android:id="@+id/favBtn"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="360dp"
        android:background="@drawable/rectangle"
        android:text="Produsele favorite" />

    <Button
        android:id="@+id/goToShopsButton"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="430dp"
        android:background="@drawable/rectangle"
        android:text="Magazine" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
...
