...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/rectangle" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swiperefresh4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="20dp">
    <ListView
        android:id="@+id/list_view"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
...
