<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rectangle">
    tools:context=".ShopsListActivity">


    <ImageView
        android:id="@+id/btn_capture_photo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/rectangle" />

    <ListView
        android:id="@+id/listViewShop"
        android:layout_width="303dp"
        android:layout_height="343dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="241dp"
        android:layout_marginEnd="50dp"
        android:divider="#EECEBDBD"
        android:dividerHeight="1dp"
        android:listSelector="@color/newButtonColor"
        android:textAlignment="center">

    </ListView>

    <TextView
        android:id="@+id/shopsTextView"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="151dp"
        android:layout_marginEnd="80dp"
        android:text="Alege un magazin"
        android:textAlignment="center"
        android:textColor="#EECEBDBD"
        android:textSize="28sp"
        android:textStyle="bold" />


</RelativeLayout>